# sweb

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: commitlint.yml  docs.yml  lint.yml  test.yml
results/: webvisits.csv  webvisits.db
sweb/: __init__.py  analyser.py  cli.py  loader.py  model.py  parser.py  workflow.py
tests/: __init__.py  conftest.py  test_analyser.py  test_cli.py  test_loader.py  test_parser.py  test_sweb.py  test_workflow.py
