[tool.poetry]
name = "sweb"
version = "0.1.0"
description = "SWeb"
authors = ["Nuno Costa <91nunocosta@gmail.com>"]
readme = "README.md"
repository = "https://github.com/91nunocosta/sweb/"

[tool.poetry.scripts]
sweb = "sweb.workflow:run"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.5.3"
parsel = "^1.7.0"
sqlmodel = "^0.0.8"
plotly = "^5.14.0"
kaleido = "0.2.1"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^2.15.0"
mypy = "^1.0.0"
pylint = "^2.16.1"
types-python-dateutil = "^2.8.19.11"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"

[tool.poetry.group.cd]
optional = true

[tool.poetry.group.cd.dependencies]
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
